--- a/css/components/memory-card.css
+++ b/css/components/memory-card.css
@@ -1,6 +1,6 @@
 .memory-card {
-    width: 155px;
-    height: 155px;
+    width: 135px;
+    height: 135px;
     background-color: #f25a70;
     border-radius: 30px;
     display: flex;
@@ -8,6 +8,7 @@
     align-items: center;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
     position: relative;
+    margin: 8px 8px;
 }
 
 .memory-card.-active {
